# ChangeLog for app-emulation/emul-linux-x86-baselibs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.90 2007/12/25 14:07:53 phreak Exp $

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing kugelfang from metadata.xml as per #46972.

*emul-linux-x86-baselibs-20071215 (15 Dec 2007)

  15 Dec 2007; <welp@gentoo.org> +emul-linux-x86-baselibs-20071215.ebuild:
  Bump.

  30 Nov 2007; Doug Klima <cardoe@gentoo.org>
  emul-linux-x86-baselibs-20071130.ebuild:
  Stable update for bug #200762, fixing issue with previous stable

*emul-linux-x86-baselibs-20071130 (30 Nov 2007)

  30 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-baselibs-20071130.ebuild:
  bump, bug 200762

  28 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  emul-linux-x86-baselibs-20071128.ebuild:
  Stable on amd64.

*emul-linux-x86-baselibs-20071128 (28 Nov 2007)

  28 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-baselibs-20071128.ebuild:
  bump for bug 197446

*emul-linux-x86-baselibs-20071124 (24 Nov 2007)

  24 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-baselibs-20071124.ebuild:
  version bump

  24 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  emul-linux-x86-baselibs-20071118.ebuild:
  amd64 stable for releng

*emul-linux-x86-baselibs-20071118 (18 Nov 2007)

  18 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-baselibs-20071118.ebuild:
  fixed lib32 dirname bug

  16 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  emul-linux-x86-baselibs-20071114.ebuild:
  fixing manifest yet again, bug 199369

*emul-linux-x86-baselibs-20071114 (14 Nov 2007)

  14 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-baselibs-20071114.ebuild:
  New emul-linux-x86-* build system.  Latest x86 stable packages.

  11 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  files/digest-emul-linux-x86-baselibs-10.1,