@@ -15,6 +15,7 @@ DIST emul-linux-x86-baselibs-20071124.tar.bz2 22167906 RMD160 3b91d2230aa18d9da2
 DIST emul-linux-x86-baselibs-20071128.tar.bz2 22122869 RMD160 2e9145dffdbc7355eaa20e73f19fb52dc8ca1323 SHA1 272ca3a2736a2cb255a28ec37050194b29faa574 SHA256 492d021436f28595d7109c64e0a5ea603db82f4745d989c7db214fb49de29cc4
 DIST emul-linux-x86-baselibs-20071130.tar.bz2 22233361 RMD160 f37ed575bd0c7a2bc1b736ee65cce82ac6226b5c SHA1 5dbb1cdf2fe42fc37983cd043f0928e7dd26377e SHA256 de5241f773656ffdbb2ce2ccd318cdd75930bc1753626a787adc2fce0f317bac
 DIST emul-linux-x86-baselibs-20071215.tar.bz2 22235300 RMD160 885ceacf9aea7ba8fea936d1900753c9b3048f33 SHA1 bde6499c65f5e8e3d09f71a9fe92a20b7bc11ce6 SHA256 6d100e376dfbc708f4abbab80117d38e16644e549f50c79d5c43f59ec10b4500
+DIST emul-linux-x86-baselibs-20071230.tar.bz2 22246079 RMD160 cf0a292855126ca28ee04c865005163f8c01f65f SHA1 a827e5faabc77f2aafee22d3df3882280dff7f71 SHA256 f71cd7e1a10f3291d0be1f0d75f466cbd8db3c157e28b3ec71147147a09adc55
 DIST expat-1.95.8.tbz2 182048 RMD160 b6b1a7c8a159196918fdc04cf0cb32d6bfd31792 SHA1 1ab1151d479f424f523dadbb26363574a5eb7a60 SHA256 90d022a2b64ac9b64c60905f2a4347fde076c93624412b3146c3abae9e9c9c3b
 DIST file-4.18.tbz2 295850 RMD160 ab40fc5b5b4b5fcd2f7538e14212b67fdab8f636 SHA1 ff66b335a9341fd0d3fe922bfdb76279cc3c8f43 SHA256 aeb624118ee42da094f0ad2d614c43f2df539f0890de4eb65c48f3d29cc50d69
 DIST gamin-0.1.8.tbz2 119544 RMD160 d55b3a559e9c5ff24e5008cdc61540f84d7c6919 SHA1 860d02d6a5cd7e9415ea2849e737e8ddea763bd6 SHA256 7a6a25e3ae91e5392f1c885cc368a058676aecbc7e9ffa0978eb4ef198e6e5b7
@@ -50,5 +51,6 @@ EBUILD emul-linux-x86-baselibs-20071124.ebuild 888 RMD160 fa7ae0dc85d3d04bc0fcda
 EBUILD emul-linux-x86-baselibs-20071128.ebuild 888 RMD160 01dbeacb46b887a025ba69201ae0fdb658a3d528 SHA1 66f0e0f9e8f021204f2753f3100bd4846f493d97 SHA256 5ad9184d7838ddf9e602b444711e14fc62e6bddaa4f365970fe3a5dd5ce5b5d7
 EBUILD emul-linux-x86-baselibs-20071130.ebuild 918 RMD160 fd1883201554f80c78343da531b857c8721be969 SHA1 7212ea53464b4530678d6cb6fabf8c919f1cf8c6 SHA256 0b17cad28eb4584682c934df15aa64e30edc9257d18f62590aaeb1dc568a969b
 EBUILD emul-linux-x86-baselibs-20071215.ebuild 916 RMD160 bd415765dbe0d43dbfeee62b151449cadce96106 SHA1 662c19cb0c147f627aa54b26e081f79665bb9843 SHA256 5e0799f704eb0eae4f7964df8751a948744a5e009eeaf4338b8fe6caffc5f50a
-MISC ChangeLog 15570 RMD160 9eeac3ca8a31e28f033118912696cafa547a11b0 SHA1 8161c59bf8debaac4d7a2abc52f9c50eabaddf3c SHA256 84112a374b483e73140bc72bdd1ad4d02dc26f3871e412c13f7237c81392db4b
+EBUILD emul-linux-x86-baselibs-20071230.ebuild 916 RMD160 6c62dd08374a18c10836517558210a1458737a61 SHA1 fc6ce99eaacf7659d2aed6e9987df5cac61dc4d5 SHA256 709bf199c247b3d1ed460f3e1799d67994edb77227303a1c9e6c8667bf9d9973
+MISC ChangeLog 15700 RMD160 3d91479f36251785e8e59cf4a269d80a4f8c130a SHA1 8a03989e8011f09d61f85a3605402d0a17c2b9f1 SHA256 970984c214e6f31a2a79908d1f613728f30f6dc5639e11dc6ae86e0d00cd25d4
 MISC metadata.xml 159 RMD160 d52f9d709e07e1eca289e2940d4292c64fda6029 SHA1 021f81ae2e25595444e199cc4be3c122d37da802 SHA256 38c5ab0a3cf60ec0611d1112056b9ff16183715db2c60a2ac84590da0ce7fb76
