@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/emul-linux-x86-baselibs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.90 2007/12/25 14:07:53 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.91 2007/12/30 20:19:15 welp Exp $
+
+*emul-linux-x86-baselibs-20071230 (30 Dec 2007)
+
+  30 Dec 2007; <welp@gentoo.org> +emul-linux-x86-baselibs-20071230.ebuild:
+  Bump
 
   25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
   Removing kugelfang from metadata.xml as per #46972.
